Location: Fixed margin of featured image and word break in contact details

--- a/app/themes/mcc-cycling/assets/less/partials/location.less
+++ b/app/themes/mcc-cycling/assets/less/partials/location.less
@@ -2,7 +2,7 @@ body.single-location {
   .cyclist-bg-blue-sky();
 
   .featured-image {
-    margin: 2em 0;
+    margin-bottom: 1em;
   }
 
   .location {
@@ -11,6 +11,10 @@ body.single-location {
         min-height: 200px;
       }
     }
+  }
+
+  .contact-info {
+    word-break: break-word;
   }
 
   aside {
